--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -3,4 +3,5 @@
 <div *ngIf="searchResult">
   <h2>{{ searchResult.title }}</h2>
   <p>{{ searchResult.extract }}</p>
+  <p>{{ searchResult.timestamp }}</p>
 </div>
