--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -2,6 +2,7 @@
 <button (click)="startSearch()" >Search!</button>
 <div *ngIf="searchResult">
   <h2>{{ searchResult.title }}</h2>
+  <img [src]="searchResult.thumbnail.source" />
   <p>{{ searchResult.extract }}</p>
-  <p>{{ searchResult.timestamp }}</p>
+  <p>Changed date {{ searchResult.timestamp | date }}</p>
 </div>
