--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -2,6 +2,7 @@
 <button (click)="startSearch()" >Search!</button>
 <div *ngIf="searchResult">
   <h2>{{ searchResult.title }}</h2>
+  <a [href]="searchResult.content_urls.desktop.page">{{searchResult.description }}</a>
   <img [src]="searchImage" />
   <p>{{ searchResult.extract }}</p>
   <p>Changed date {{ searchResult.timestamp | date }}</p>
