--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -1,9 +1,10 @@
 <input #search />
 <button (click)="startSearch()" >Search!</button>
-<div *ngIf="searchResult">
-  <h2>{{ searchResult.title }}</h2>
-  <a [href]="searchResult.content_urls.desktop.page">{{searchResult.description }}</a>
-  <img [src]="searchImage" />
-  <p>{{ searchResult.extract }}</p>
-  <p>Changed date {{ searchResult.timestamp | date }}</p>
+<div *ngIf="searchResult"> 
+  <div *ngFor="let result of searchResult.pages">
+    <h2>{{ result.title }}</h2>
+    <img [src]="getImageUrl(result)" [alt]="result.title" />
+    <p>{{ result.extract }}</p>
+    <p>Changed date {{ result.timestamp | date }}</p>
+  </div>
 </div>
