--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -1,10 +1,12 @@
-<input #search placeholder="yyyy/mm/dd"/>
+<label>Year: </label><input #search /><br>
+<label>Month: </label><input #search1 /><br>
+<label>Day: </label><input #search2 /><br>
 <button (click)="startSearch()" >Search!</button>
 <div *ngIf="searchResult"> 
   <div *ngFor="let result of searchResult.pages">
     <h2>{{ result.title }}</h2>
     <img [src]="getImageUrl(result)" [alt]="result.title" />
     <p>{{ result.extract }}</p>
-    <p>Changed date {{ result.timestamp | date }}</p>
+   <!-- <p>Changed date {{ result.timestamp | date }}</p>-->
   </div>
 </div>
