--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -4,9 +4,10 @@
 <button (click)="startSearch()" >Search!</button>
 <div *ngIf="searchList"> 
   <div *ngFor="let result of searchList.articles">
-    <h2>{{ searchList.article.title }}</h2>
+    <h2>{{ result.title }}</h2>
     <img [src]="getImageUrl(result)" [alt]="result.title" />
-    <p>{{ result.extract }}</p>
+    <p>{{ result.description }}</p>
+    <!--<p>{{ result.extract }}</p>
    <!-- <p>Changed date {{ result.timestamp | date }}</p>-->
   </div>
 </div>
