--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -2,12 +2,13 @@
 <label>Month: </label><input #search1 /><br>
 <label>Day: </label><input #search2 /><br>
 <button (click)="startSearch()" >Search!</button>
+
 <div *ngIf="searchList"> 
   <div *ngFor="let result of searchList.articles">
-    <h2>{{ result.title }}</h2>
+    <p> {{ result.rank }} </p>
+    <a [href]="result.content_urls.desktop.page">{{ result.title }}</a><br>
     <img [src]="getImageUrl(result)" [alt]="result.title" />
     <p>{{ result.description }}</p>
-    <!--<p>{{ result.extract }}</p>
-   <!-- <p>Changed date {{ result.timestamp | date }}</p>-->
+  
   </div>
 </div>
